--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,10 @@
     "description": "A simple backend for a todo app",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js"
+        "start": "node index.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "cors": "^2.8.5"
+        "cors": "^2.8.5",
+        "express": "^4.17.1"
     }
-  }
-  
+}
